tests/snapshots/compare@stateless_add_rule3.snap
---
source: src/analyses/compare.rs
info: stateless_add_rule3
---
Difference on `&[&mut ref x]: &&mut [T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut ref x]: &mut &mut [T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &&mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &mut &mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &&mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &mut &mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut ref x]: &&mut &mut [T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut ref x]: &mut &mut &mut [T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &&mut [[CT]]`:
   left returned: Success(x: [CT])
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &&mut [&T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &&mut &mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &mut &mut [[CT]]`:
   left returned: Success(x: [CT])
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &mut &mut [&T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut x]: &mut &mut &mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &&mut [[CT]]`:
   left returned: Success(x: [CT])
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &&mut [&T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &&mut &mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &mut &mut [[CT]]`:
   left returned: Success(x: [CT])
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &mut &mut [&T]`:
   left returned: Success(x: &T)
  right returned: TypeError("MutabilityMismatch")
Difference on `&[&mut mut x]: &mut &mut &mut [CT]`:
   left returned: Success(x: CT)
  right returned: TypeError("MutabilityMismatch")
