tests/snapshots/ruleset_encodings@ruleset-encodings.snap
---
source: src/wasm.rs
---
stable_rust: AQEAAQAAAQABAAAAAAAAAAAAAAAAAAA=
stateless: AQEBAAABAQABAQEAAAAAAAAAAAAAAAA=
stateless_no_temporaries: AQEBAAABAQABAgEAAAAAAAAAAAAAAAA=
stateless_no_binding_modifiers: AQEBAAABAQABAgIAAAAAAAAAAAAAAAA=
stateless_2021: AQEBAQABAQABAAAAAAAAAAAAAAAAAAA=
eat_outer_2021: AQEBAQIBAQABAAAAAAAAAAAAAAAAAAA=
rfc3627: AQEBAgEBAQEBAAIAAAAAAAAAAAAAAAA=
rfc3627_no_binding_modifiers: AQEBAgEBAQEBAgIAAAAAAAAAAAAAAAA=
rfc3627_2021: AQEBAQEBAQEBAAAAAAAAAAAAAAAAAAA=
rfc3627_2021_always_eat_both: AQEBAQIBAQEBAAAAAAAAAAAAAAAAAAA=
rfc3627_2024_min: AQEAAgAAAQABAAIAAAAAAAAAAAAAAAA=
structural: AQAAAwAAAQAAAQEAAAAAAAAAAAAAAAA=
min_ergonomics: AQEAAwAAAQAAAgIAAAAAAAAAAAAAAAA=
waffle: AQEBAAEAAQEBAAIAAAAAAAAAAAAAAAA=
