tests/snapshots/solver_traces@10208025100337686248.snap
---
source: tests/trace_solver.rs
---
Query: `[&ref mut x]: &mut [T]`

[&ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
&ref mut x @ &mut (*p).0: &mut T
// Applying rule `Deref`
&ref mut x @ (&mut (*p).0 as &_): &T
// Applying rule `ExprSimplification`
&ref mut x @ &(*p).0: &T
// Applying rule `Deref`
ref mut x @ *&(*p).0: T
// Applying rule `Binding`
x @ &mut *&(*p).0: &mut T

// Final bindings:
let x: &mut T = &mut *&(*p).0
