tests/snapshots/solver_traces@1185843177942813374.snap
---
source: tests/trace_solver.rs
---
Query: `[&&mut x]: &[&mut T]`

[&&mut x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&&mut x @ &(*p).0: &&mut T
// Applying rule `Deref`
&mut x @ *&(*p).0: &mut T
// Applying rule `Deref`
x @ **&(*p).0: T

// Final bindings:
let x: T = **&(*p).0
