tests/snapshots/solver_traces@12080392467036943215.snap
---
source: tests/trace_solver.rs
---
Query: `[ref x]: &[T]`

[ref x] @ p: &[T]
// Applying rule `ConstructorRef`
ref x @ &(*p).0: &T
// Applying rule `Binding`
x @ &&(*p).0: &&T

// Final bindings:
let x: &&T = &&(*p).0
